<resources>
    <string name="app_name">MoviePicker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_language">Language</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign In</string>

    <string name="login_details_empty">User Details Can\'t be empty</string>
    <string name="login_details_invalid">Username or Password are Invalid!</string>

    <string name="login_in_forgot_password">Forgot Password</string>
    <string name="login_in_sign_up">Sign In</string>
    
    <string name="progress_dialog_wait_title">Working</string>
    <string name="progress_dialog_wait_message">Please Wait</string>

</resources>
