<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin_extra"
            android:paddingEnd="@dimen/activity_horizontal_margin_extra"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_screen_margin">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_login_email_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/txt_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="5dp"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_login_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txt_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login_email"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:theme="@style/SignInButton"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_screen_margin">

                <TextView
                    android:id="@+id/txt_login_in_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_in_forgot_password"/>

                <TextView
                    android:id="@+id/txt_login_in_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_in_sign_up" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

